update python setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.venvPath": "C:\\programming\\Miniconda3\\envs"
+    "python.pythonPath": "C:\\programming\\Miniconda3\\envs\\py3ML"
 }
